--- a/src/pages/user/EventDetail.css
+++ b/src/pages/user/EventDetail.css
@@ -1,5 +1,5 @@
 .event-detail-page {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Cormorant Garamond', Georgia, serif;
   /* Match UserHome Gradient */
   background: linear-gradient(180deg, #3b0b0b, #050505);
   color: #fff;
