--- a/src/pages/user/UserHome.css
+++ b/src/pages/user/UserHome.css
@@ -7,7 +7,7 @@
   padding: 100px 40px 60px;
   color: #fae38c;
   text-align: center;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Cormorant Garamond', Georgia, serif;
 }
 
 /* --------------------------------------------------------------------- */
