--- a/src/pages/user/History.css
+++ b/src/pages/user/History.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   padding-top: 90px;
   padding-bottom: 35px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Cormorant Garamond', Georgia, serif;
   color: #fff;
 }
 
