--- a/src/pages/user/MyTickets.css
+++ b/src/pages/user/MyTickets.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 20px;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Cormorant Garamond', Georgia, serif;
 }
 
 .mt-title {
