--- a/src/pages/user/profile/UserProfile.css
+++ b/src/pages/user/profile/UserProfile.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
   background: #0b0b0f;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Cormorant Garamond', Georgia, serif;
   padding-top: 120px;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
