--- a/src/pages/user/BookingConfirmation.css
+++ b/src/pages/user/BookingConfirmation.css
@@ -23,7 +23,7 @@
 .confirmation-card h1 {
     margin-top: 0;
     color: #fff;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .confirmation-card h2 {
