--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,7 +38,7 @@
 }
 
 .header-title {
-  font-family: 'Cormorant Garamond', Georgia, serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
   font-weight: 600;
   font-style: italic;
